--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^4.0.3",
+    "@nomicfoundation/solidity-analyzer-win32-x64-msvc": "^0.1.2",
+    "ethers": "^6.16.0",
     "hardhat": "^3.1.0"
   }
 }
