--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "secure-vault-system",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "hardhat test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
   "devDependencies": {
-    "@nomicfoundation/hardhat-ethers": "^4.0.3",
-    "@nomicfoundation/solidity-analyzer-win32-x64-msvc": "^0.1.2",
-    "ethers": "^6.16.0",
-    "hardhat": "^3.1.0"
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "chai": "4.3.7",
+    "ethers": "5.7.2",
+    "hardhat": "2.22.5",
+    "mocha": "10.2.0"
   }
 }
