--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-node_modules/ 
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Hardhat build artifacts
+artifacts/
+cache/
+
+# Environment variables
+.env
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Coverage reports
+coverage/
+coverage.json
+
+# Docker
+docker-compose.override.yml
